--- a/beyonder/bootstrap/expec.html
+++ b/beyonder/bootstrap/expec.html
@@ -66,12 +66,12 @@
           <div class="card-body text-light px-5">
             <h4 class="card-title text-center">Playboy Cléo Pires Edição de Aniversário de 35 anos</h4>
             <div class="row mt-4">
-              <div class="col-4 mb-4">
+              <div class="col-lg-4 col-md-12 col-12 mb-4">
                 <img class="img-fluid shadow-image rounded" src="https://i.imgur.com/sluMo6o.jpg" title="source: imgur.com" />
                 <p class="card-text text-center">Capa</p>
               </div>
 
-                <div class="col-8">
+                <div class="col-lg-8 col-md-12 col-12">
                   <dl class="row ">
                     <dt class="col-sm-4">Estrela de Capa:</dt>
                     <dd class="col-sm-8">Cléo Pires</dd>
