--- a/beyonder/bootstrap/dophin-home.html
+++ b/beyonder/bootstrap/dophin-home.html
@@ -26,8 +26,9 @@
     <!--link href="starter-template.css" rel="stylesheet"-->
     <style>
         body{
-          background-image: url('-img-ext/dbs.gif');
+          background-image: url('https://i.imgur.com/txJ6DPX.jpg');
           background-size: cover;
+          font-family: consolas;
         }
 
 
@@ -40,7 +41,7 @@
   <body>
 
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-soft-transparency-dark">
-      <a class="navbar-brand" href="#">TOC</a>
+      <a class="navbar-brand" href="#">/DolphinProtocol</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -59,8 +60,7 @@
         </ul>
         <form class="form-inline my-2 my-lg-0">
           <div class="navbar-form form-group">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+            <button class="btn btn-outline-v2-primary my-2 my-sm-0" type="submit">Search</button>
           </div>
         </form>
       </div>
@@ -72,47 +72,44 @@
       <div class="row">
         <div class="col-12 col-lg-12">
           <h1 class="text-center mb-4 text-light">
-            Home
+            Acervo de Luans Vitolas
           </h1>
           <div class="row">
-            <div class="col-12 col-md-6 col-lg-4 mt-5 mb-5">
+            <div class="col-12 col-md-6 col-lg-2 mt-5 mb-5">
               <div class="card text-center bg-soft-transparency-dark animated fadeInDown">
                 <div class="">
                   <div class="card-picture">
-                    <img class="card-img rounded" src="https://i.imgur.com/HouSi6P.png" alt="Card image cap">
+                    <img class="card-img rounded" src="https://i.imgur.com/RUjeXT9.png" alt="Card image cap">
                   </div>
                 </div>
                 <div class="card-body text-light">
-                  <h4 class="card-title">Livros</h4>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <h4 class="card-title">Luan Vitola</h4>
                   <button type="button" class="btn btn-raised btn-outline-v2-info btn-block waves">Primary</button>
                 </div>
               </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4 mt-5 mb-5">
+            <div class="col-12 col-md-6 col-lg-2 mt-5 mb-5">
               <div class="card text-center bg-soft-transparency-dark animated fadeInDown">
                 <div class="">
                   <div class="card-picture">
-                    <img class="card-img rounded" src="https://i.imgur.com/x94Ck8M.jpg" alt="Card image cap">
+                    <img class="card-img rounded" src="https://i.imgur.com/9A0IsLK.png" alt="Card image cap">
                   </div>
                 </div>
                 <div class="card-body text-light">
-                  <h4 class="card-title">Dragon Ball</h4>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <h4 class="card-title">Superior Luan Vitola</h4>
                   <button type="button" class="btn btn-raised btn-outline-v2-info btn-block waves">Primary</button>
                 </div>
               </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4 mt-5 mb-5">
+            <div class="col-12 col-md-6 col-lg-2 mt-5 mb-5">
               <div class="card text-center bg-soft-transparency-dark animated fadeInDown">
                 <div class="">
                   <div class="card-picture">
-                    <img class="card-img rounded" src="https://i.imgur.com/DFUPYfm.jpg" alt="Card image cap">
+                    <img class="card-img rounded" src="https://i.imgur.com/kLZpSGf.png" alt="Card image cap">
                   </div>
                 </div>
                 <div class="card-body text-light">
-                  <h4 class="card-title">Revistas Playboy</h4>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <h4 class="card-title">O Último Herói Mongol: Luan Vitola</h4>
                   <button type="button" class="btn btn-raised btn-outline-v2-info btn-block waves">Primary</button>
                 </div>
               </div>
